--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.14</version>
+        </dependency>
 
         <!-- JSON -->
         <dependency>
