--- a/pom.xml
+++ b/pom.xml
@@ -444,6 +444,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <parallel>none</parallel> <!-- Disables parallel test execution -->
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
